# senai-projeto-aplicado-hotelaria-backend

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  init_db.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yaml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: cb3feda07153_create_tables.py
app/: __init__.py  accommodation.py  accommodations.py  acomodacoes.py  amenities.py  api_accommodations.py  api_acomodacoes.py  api_amenities.py  api_booking.py  api_guest.py  app.py  booking.py  db.py  guest.py  guests.py  schema.sql
app/api/: accommodations.py  amenities.py  auth.py  bookings.py  guests.py  main.py  users.py
app/auth/: hash.py  security.py  token.py
app/controller/: AccommodationController.py  AmenitieController.py  BookingController.py  GuestController.py
app/database/: db.py  db_init.py  models.py  populate_db.py  schema.sql  seed.py  seed.sql
app/domain/: Accommodation.py  Accomodation.py  Amenitie.py  Booking.py  Guest.py  Guests.py  accommodation.py  booking.py  guest.py
app/entities/: Accommodation.py  Booking.py  Guest.py  User.py
app/entity/: Accommodation.py  Accomodation.py  Booking.py  Guests.py
app/errors/: AlreadyExists.py  AlreadyExistsError.py  ConflictBookingError.py  InvalidStatusChangeError.py  NotFoundError.py  OutOfRangeError.py
app/factory/: RepositoryFactory.py  repository_factory.py
app/infra/: db.py  models.py  populate_db.py
app/routers/: accommodation.py  amenities.py  auth.py  booking.py  guests.py  users.py
app/schemas/: Accommodation.py  AccommodationSchema.py  Amenitie.py  Booking.py  BookingSchema.py  Enums.py  Guest.py  GuestSchema.py  Info.py  RepositorySettings.py  User.py
app/service/: accommodation_service.py  booking_service.py  guest_service.py
app/services/: AccommodationService.py  AmenitieService.py  BookingService.py  GuestService.py  UserService.py  accommodations.py  amenities.py  bookings.py  createNewBooking.py  create_new_booking.py  find_booking_by.py  find_bookings_by_guest.py  guests.py  list_all_bookings.py  users.py
app/settings/: Settings.py
app/static/: accommodations.js  acomodacoes.js  alteraHospede.js  booking.js  guests.js  hospedes.js  index.js  newAccommodation.js  newBooking.js  newGuest.js  style.css  updateAccommodation.js  updateGuest.js
app/templates/: accommodations.html  acomodacoes.html  alteraAcomodacoes.html  alteraHospedes.html  base.html  cadastroAcomodacoes.html  cadastroComodidades.html  cadastroHospedes.html  cadastroReservas.html  guests.html  hospedes.html  index.html  list.html  newAccommodation.html  newBooking.html  newGuest.html  updateAccommodation.html  updateBooking.html  updateGuest.html
app/utils/: StrictModel.py  calculate_budget.py  generate_locator.py  get_amenities_from_db.py  is_valid_cpf.py  populate_db.py  serialize_for_json.py  time_in_range.py  transform.py  validateStatusChange.py
backend/: Dockerfile  README.md  docker-compose.yml
certs/: dev.crt  dev.key
frontend/portal_hospede/: index.html  package.json  pnpm-lock.yaml
migrations/versions/: 71ca64ab41c3_create_tables.py
tests/integration/: conftest.py  test_api_accommodation.py  test_api_booking.py  test_api_bookings.py  test_api_guests.py  test_dao_accommodation.py  test_dao_amenities.py  test_dao_booking.py  test_dao_guest.py  test_dao_guests.py  test_db.py  test_db_accommodation.py  test_db_booking.py  test_db_guest.py  test_db_sqlalchemy.py  test_db_sqlite.py  test_factory.py  test_guest_repository.py  test_guests_repository.py  test_repository_accommodation.py  test_repository_booking.py  (+3 more)
(+160 files in other folders)
