[tool.poetry]
name = "app"
version = "0.1.0"
description = "Hotel booking system"
authors = ["bentoluizv <bentoluizv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
pydantic = "^2.7.4"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pyjwt = "^2.9.0"
pydantic-settings = "^2.4.0"
python-ulid = {extras = ["pydantic"], version = "^2.7.0"}
psycopg2-binary = "^2.9.10"
alembic = "^1.13.3"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.4.9"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = ["app/database/migrations"]



[tool.ruff.lint]
preview = true
ignore = ['PLR6301']
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
dev = 'fastapi dev app/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app'
post_test = 'coverage html'
run = 'fastapi run app/app.py'